--- a/src/components/mobilePojectSectiom/MobileProjectList.css
+++ b/src/components/mobilePojectSectiom/MobileProjectList.css
@@ -7,10 +7,11 @@
    flex-direction: column;
    padding-right: 10px;
    align-items: center;
-   border-top: 1px solid;
+   background: radial-gradient(circle, rgba(255,255,255,1) 30%, rgba(205,255,252,0.9528186274509804) 100%);
+
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
-   border-color: aqua;
+   border-color: rgb(60, 62, 62);
 
 }
 
@@ -23,11 +24,12 @@
    align-items: center;
    justify-content: flex-end;
    box-shadow: 5px 5px 2px 1px rgba(193, 193, 193, 0.2);
-   background: linear-gradient(166deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 59%, rgba(0,212,255,1) 100%);
+   background: linear-gradient(166deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 59%, rgb(188, 244, 255) 100%);
    animation-iteration-count: running;
    animation-name:selectedMobileProject;
    animation-duration: 0.5s;
    cursor: pointer;
+   border-radius: 20px;
    border-top: 1px solid;
    border-right: 1px solid;
    border-color: aqua;
