--- a/src/components/mobilePojectSectiom/MobileProjectList.css
+++ b/src/components/mobilePojectSectiom/MobileProjectList.css
@@ -7,8 +7,7 @@
    flex-direction: column;
    padding-right: 10px;
    align-items: center;
-   background: radial-gradient(circle, rgba(255,255,255,1) 30%, rgba(205,255,252,0.9528186274509804) 100%);
-
+   background: radial-gradient(circle, rgba(255,255,255,0) 0%, rgba(213,255,246,0.9528186274509804) 100%);   margin-right: 5px;
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    border-color: rgb(60, 62, 62);
@@ -17,6 +16,7 @@
 
 .selectedMobileProject{
   height: 100%;
+  margin-right: 5px;
   min-width: 150px;
    display : flex;
    flex-direction: column;
@@ -24,7 +24,7 @@
    align-items: center;
    justify-content: flex-end;
    box-shadow: 5px 5px 2px 1px rgba(193, 193, 193, 0.2);
-   background: linear-gradient(166deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 59%, rgb(188, 244, 255) 100%);
+   background: linear-gradient(346deg, rgba(255,255,255,0) 0%, rgba(213,255,246,0.9528186274509804) 100%);
    animation-iteration-count: running;
    animation-name:selectedMobileProject;
    animation-duration: 0.5s;
